# rsip-dns

./: Cargo.toml  README.md
src/: dns_client.rs  lib.rs  target.rs
src/hickory_dns/: async_hickory_client.rs  hickory_client.rs  mod.rs  recursive_client.rs
src/lookup/: just_domain_lookup.rs  mod.rs
src/records/: addr_record.rs  mod.rs  naptr_record.rs  srv_record.rs
src/resolvables/: resolvable.rs  resolvable_addr_record.rs  resolvable_ip_addr.rs  resolvable_naptr_record.rs  resolvable_srv_record.rs
src/trust_dns/: async_trust_dns_client.rs  mod.rs  trust_dns_client.rs
tests/lookups/: ip_addr.rs  just_domain.rs  mod.rs  ttl_tracking.rs
tests/records/: srv_domain.rs
tests/resolvables/: resolvable_addr_record.rs  resolvable_ip_addr.rs  resolvable_naptr_record.rs  resolvable_srv_record.rs
