[package]
name = "rsip-dns"
version = "0.2.0"
authors = ["Filippos Vasilakis <vasilakisfil@gmail.com>"]
edition = "2024"
description = "SIP Rust library implementing RFC 3263, implemented on top of rsip"
repository = "https://github.com/vasilakisfil/rsip"
documentation = "https://docs.rs/rsip-dns"
keywords = ["sip", "3263", "dns", "voip", "srv"]
categories = ["parser-implementations", "parsing", "network-programming"]
license-file = "LICENSE"

[workspace]

[dependencies]
rsip = { version = "0.4.0" }
async-trait = { version = "0.1.89" }
futures = { version = "0.3.31" }
nom = { version = "8.0.0", features = ["alloc"] }
hickory-resolver = { version = "0.25.2", optional = true }
hickory-proto = { version = "0.25.2", optional = true }
testing-utils = { version = "0.1.2", optional = true }


[features]
default = ["testing-utils"]
testing-utils = ["dep:testing-utils", "rsip/test-utils"]
hickory-dns = ["hickory-resolver", "hickory-proto"]

[dev-dependencies]
rsip = { version = "0.4.0", features = ["test-utils"] }
testing-utils = { version = "0.1.2" }
quote = "1.0.41"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
rand = { version = "0.9.2" }
once_cell = { version = "1.21.3" }
log = { version = "0.4.28" }
pretty_env_logger = "0.5.0"

#[package.metadata.docs.rs]
#all-features = true
#rustdoc-args = ["--cfg", "docsrs"]
